--- a/indexhtml/mainfile.html
+++ b/indexhtml/mainfile.html
@@ -38,7 +38,7 @@
 
       <ol>
         <li><strong>Cenote - mexico</strong></li><a id="Cenote">
-          <img src="Image/Cenote Mexico.webp" alt="Cenote Mexico" width="50%">
+          <img src="Image/Cenote Mexico.webp" alt="Cenote Mexico" >
           <p> Diving in cenotes is a unique and exciting experience. Many cenotes are connected to extensive underwater
             cave systems, making them intriguing diving spots. Cenotes are known for their impressive geological
             formations, including stalactites, stalagmites, and other intricate underwater features. These formations
@@ -47,7 +47,7 @@
             geological wonders and historical significance</p>
           <li><strong>Ishigaki Island - Okinawa Japan</strong></li> <a id="Ishigaki">
 
-            <img src="Image/kuroshima manta ishigaki.jpg" alt="kuroshima manta ishigaki" width="50%">
+            <img src="Image/kuroshima manta ishigaki.jpg" alt="kuroshima manta ishigaki" >
             <p>Ishigaki boasts one of the highest encounter rates of manta rays in the world, and many divers visit the
               island in order to watch the breathtaking dance of this elegant creature. Although mantas are around
               Ishigaki all year round, it is not that they are swimming everywhere in the ocean nor you can see them
@@ -55,13 +55,13 @@
               Scramble of Kabira, Kuroshima, Panari, and Yonara Channel.</p>
             <li><strong>Gili Islands - Indonesia</strong> </li>
             <a id="Gili">
-              <img src="Image/Gili trawangan.webp" alt="Gili trawangan" width="50%">
+              <img src="Image/Gili trawangan.webp" alt="Gili trawangan" >
               <p>The Gili islands are a fantastic destination for divers both novice and scuba savvy. Those completing
                 an Open Water certification and diving for the first time will be comforted by the warm water, high
                 visibility, short distances to dive sites, and common sightings of peaceful turtles</p>
               <li><strong>Coron island, Philliphines</strong></li>
               <a id="Coron">
-                <img src="Image/coron wreck.webp" alt=“coron wreck" width="50%">
+                <img src="Image/coron wreck.webp" alt=“coron wreck" >
                 <p>Coron has been described as one of the best spots in the world for wreck diving! This recognition is
                   well-deserved, as on the 24th of September 1944, a fleet of Japanese ships was sunk by an American air
                   raid, creating a diver’s paradise. Up to now, 12 wrecks have been discovered creating exceptional dive
